syntax = "proto3";

package project;
import "google/protobuf/timestamp.proto";

option go_package = "./pkg/project/pb";

message CategoryInfoResponse {
  int32 id = 1;
  string name = 2;
  int32 parentCategory = 3;
  int32 level = 4;
  bool isTab = 5;
}

message CategoryListResponse {
  string jsonData = 1;
}

message CategoryListRequest {
  int32 id = 1;
  int32 level = 2;
}

message SubCategoryListResponse {
  CategoryInfoResponse info = 1;
  repeated CategoryInfoResponse subCategory = 2;
}

message CategoryInfoRequest {
  int32 id = 1;
  string name = 2;
  int32 parentCategory = 3;
  int32 level = 4;
  bool isTab = 5;
}

message DeleteCategoryRequest {
  int32 id = 1;
}
